# fido

./: Makefile.am  README  configure.ac
client/: .gitignore  Makefile  Makefile.am  fido-application.vala  fido-cmd-main.vala  fido-feed-list.vala  fido-feed-listwidget.vala  fido-main.vala  fido-subscribe-main.vala  fido-window.vala  fido.gresource.xml  fido.vala
doc/: TODO  fido-1.0.txt
experiments/: Makefile  fido-add-feed.vala  fido-memory-store.vala  fido_db.txt  test.py
help/: Makefile.am
help/C/: index.page  subscribe.page
po/: POTFILES.in
server/: .gitignore  Makefile  Makefile.am  database.vala  dbus-interface.vala  feed.vala  fido-database.vala  fido-db.vala  fido-dbus-interface.vala  fido-feed.vala  fido-item.vala  fido-logging.vala  fido-server.vala  fido-updater.vala  fido-utils.vala  item.vala  logging.vala  main.vala  updater.vala
sqlite-schemas/: Create.sql  Makefile.am  Update-to-2.sql
src/client/: Makefile  main.vala
src/server/: .gitignore  Makefile  main.vala
tests/: Makefile.am  README  run  test-feed.vala  test-main.vala  test-updater.vala  test-utils.vala  test-webserver.vala
vapi/: README  config.vapi  libgrss-0.5.vapi  libsoup-2.4.vapi
